Make more type, layout, and spacing fixes. (see #780)

--- a/gobotany/static/sass/_home.scss
+++ b/gobotany/static/sass/_home.scss
@@ -273,11 +273,10 @@ a {
             width: auto;
         }
         .tagline {
-            bottom: 0.4em;
+            bottom: 0.8em;
             font-size: 0.9em;
-            left: 15em;
+            left: 13em;
             margin: 0;
-            padding-right: 2em; /* keep 'New England' one line when narrow */
         }
         nav {
             background: #21555c;
